--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,31 @@ h1 {
 }
 
 h2 {
+  text-align: center;
+  color: white;
+  font-size: 42px;
+  font-weight: 300;
+  text-decoration: underline;
+}
+
+video {
+  display: block;
+  margin: 0 auto;
+}
+
+img {
+  display: flex;
+  margin: 50px auto;
+}
+
+h3 {
   font-size: 16px;
   text-align: center;
   color: aquamarine;
+}
+
+p {
+  text-align: center;
+  font-size: 21px;
+  color: gray;
 }
